# tesserwrap

./: .build.sh.swp  .gitignore  CMakeLists.txt  MANIFEST.in  Makefile  Makefile.old  README  Vagrantfile  configure.ac  install.sh  opencvsplittest.py  setup.py  tesseract_wrap.cpp  tesseract_wrap.h  tesserwrap.cpp  tesserwrap.py  test.py  tox.ini
CMake/: FindBoostPython.cmake  FindLeptonica.cmake  FindTesseract.cmake
docs/: Makefile  conf.py  index.rst  make.bat
tesserwrap/: __init__.py  core.py  tesseract.py
tesserwrap/cpp/: tesseract_ext.cpp  tesseract_ext.h  tesseract_wrap.cpp  tesseract_wrap.h
tests/: test.py  test_tesserwrap.py  util.py
